# Limbiclab

./: .env.local.example  .gitignore  ADS_PLAYBOOK.md  COUPON_AD_STRATEGY.md  EMAIL_SETUP.md  README.md  VENICE_WITCHES_SCRIPT.md  VIDEO_EDITING_WATCHLIST.md  YOUTUBE_ADS_STRATEGY.md  package-lock.json  package.json  skills-lock.json  tailwind.config.ts  tsconfig.json  vitest.config.ts
.claude/skills/: youtube-ads
.github/workflows/: ci.yml  newsletter.yml
__tests__/app/: learn-page.test.tsx
__tests__/lib/: simulation.test.ts
app/: globals.css  layout.tsx  opengraph-image.tsx  page.tsx
app/attachment-theory/: page.tsx
app/bipolar/: page.tsx
app/brain/: page.tsx
app/cannabis/: page.tsx
app/case-analysis/: page.tsx
app/ebook/: page.tsx
app/environmental-disorders/: page.tsx
app/giveaway/: page.tsx
app/jealousy-neurobiology/: page.tsx
lib/: attachmentData.ts  bipolarData.ts  caseAnalysisData.ts  ebookData.ts  environmentalData.ts  fbq.ts  glossaryData.ts  gtag.ts  jealousyData.ts  learnContent.ts  satanismResearchData.ts  schizophreniaData.ts  simulation.ts  socialBondingData.ts  supabase-admin.ts  supabase-leads.ts  types.ts
newsletter-crew/: .env.example  .gitignore  Dockerfile  app.py  gunicorn.conf.py  pyproject.toml  railway.toml
newsletter-crew/src/limbiclab_newsletter/: main.py
newsletter-crew/src/limbiclab_newsletter/crews/newsletter_crew/: newsletter_crew.py
newsletter-crew/src/limbiclab_newsletter/crews/newsletter_crew/config/: agents.yaml  tasks.yaml
supabase/: add_ebook_token.sql  add_language_preference.sql
(+59 files in other folders)
